feat(auth_service): change logic for register and verification; replace code generation for special verification jwt token
